# hw3-nehasuresh612

./: .gitignore  Makefile  README.md  ai_documentation.txt  myst.yml
ligotools/: pyproject.toml  utils.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
