[build-system]
requires = ["setuptools >= 70", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC)" },
  { name="Neha Suresh" },
]
description = "A Python library that provides tools for reading LIGO data"
readme = "README.md"
version = "0.0.1"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "scipy",
    "h5py",
    "matplotlib",
    "ipykernel",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-nehasuresh612"
Issues = "https://github.com/UCB-stat-159-f25/hw3-nehasuresh612/issues"
